exports[`Input component snapshot renders as textarea with max length 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="Login-bio">
    Bio
  </label>
  <textarea
    className="textarea_1huv73q"
    id="Login-bio"
    maxLength="1000"
    name="bio"
    placeholder="Bio"
    value="This is my bio" />
</p>
`;

exports[`Input component snapshot renders basic required data 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="Login-email" />
  <input
    className="input_10e10cq"
    id="Login-email"
    name="email"
    type="email" />
</p>
`;

exports[`Input component snapshot renders extra info and it is active and invalid 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="Login-email">
    Email
  </label>
  <input
    className="input_10e10cq-o_O-validatedInput_4hnf83"
    id="Login-email"
    name="email"
    placeholder="Email"
    type="email"
    value="notAnEmail" />
</p>
`;

exports[`Input component snapshot renders label and input is invalid 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="Login-email">
    Email
  </label>
  <input
    className="input_10e10cq-o_O-validatedInput_4hnf83-o_O-inputErr_229bd5"
    id="Login-email"
    name="email"
    type="email"
    value="notAnEmail" />
  <ErrorMsg
    htmlFor="Login-email">
    Input is invalid
  </ErrorMsg>
</p>
`;

exports[`Input component snapshot renders label and input is required 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="Login-email">
    Email
  </label>
  <input
    className="input_10e10cq-o_O-validatedInput_4hnf83-o_O-inputErr_229bd5"
    id="Login-email"
    name="email"
    type="email" />
  <ErrorMsg
    htmlFor="Login-email">
    Input required
  </ErrorMsg>
</p>
`;

exports[`Input component snapshot renders label and is focused 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="EditUser-firstname">
    First Name
  </label>
  <input
    className="input_10e10cq"
    id="EditUser-firstname"
    name="firstname"
    type="text"
    value="John" />
</p>
`;
